Intégration du menu responsive part1

--- a/index.html
+++ b/index.html
@@ -9,40 +9,38 @@
         <meta name="description" content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à promouvoir les bienfaits du développement web pour la santé !">
     </head>
     <body>
-        <div class="container">
             <header>
-                    <div class="logo">
-                        <img src="img/logo-eastcoders.png" alt="Eastcoders"/>
-                    </div>
-                    <nav class="header-nav" role="navigation">
-                        <ul>
-                            <li>
-                                <a href="index.html">Accueil</a>
-                            </li>
-                            <li>
-                                <a href="a-propos.html">L'association</a>
-                            </li>
-                            <li>
-                                <a href="evenements.html">Nos événements</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
+                <div class="logo">
+                    <img src="img/logo-eastcoders.png" alt="Eastcoders"/>
                 </div>
-            </header>
-            <main>
-                <section>
+            <nav class="header-nav" role="navigation">
+                <label>☰</label>
+                <ul>
+                    <li>
+                        <a href="index.html">Accueil</a>
+                    </li>
+                    <li>
+                        <a href="a-propos.html">L'association</a>
+                    </li>
+                    <li>
+                        <a href="evenements.html">Nos événements</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
 
-                </section>
-                <section>
+            </section>
+            <section>
 
-                </section>
-                <section>
+            </section>
+            <section>
 
-                </section>
-            </main>
-        </div>
+            </section>
+         </main>
     </body>
 </html>
