Intégration Bootstrap et remplacement navigation

--- a/evenements.html
+++ b/evenements.html
@@ -1,48 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-        <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
-        <meta name="description" content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à promouvoir les bienfaits du développement web pour la santé !">
-    </head>
-    <body>
-        <div class="container">
-            <header>
-                    <div class="logo">
-                        <img src="img/logo-eastcoders.png" alt="Eastcoders"/>
-                    </div>
-                    <nav class="header-nav" role="navigation">
-                        <ul>
-                            <li>
-                                <a href="index.html">Accueil</a>
-                            </li>
-                            <li>
-                                <a href="a-propos.html">L'association</a>
-                            </li>
-                            <li>
-                                <a href="evenements.html">Nos événements</a>
-                            </li>
-                            <li>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </header>
-            <main>
-                <section>
 
-                </section>
-                <section>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+    <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
+    <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
+    <meta name="description"
+        content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à promouvoir les bienfaits du développement web pour la santé !">
+</head>
 
-                </section>
-                <section>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders" /></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="a-propos.html">L'association</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="evenements.html">Nos événements<span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
 
-                </section>
-            </main>
-        </div>
-    </body>
+        </section>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+    </main>
+</body>
+
 </html>
