--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
-        <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
         <title>Eastcoders' - L'association fictive des codeurs de l'est !</title>
         <meta name="description" content="Vous êtes un codeur de l'Est ? Rejoignez notre association qui vise à promouvoir les bienfaits du développement web pour la santé !">
+        <!--scripts-->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
+        <!--stylesheets-->
+        <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
+        <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <!--logo + navigation menu-->
+            <nav class="navbar navbar-expand-lg navbar-dark header-nav">
                 <a class="navbar-brand" href="index.html"><img src="img/logo-eastcoders.png" alt="Eastcoders"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,20 +35,59 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="btn btn-light" href="#">Soutenez-nous !</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
         </header>
+        <!--main section-->
         <main>
-            <section>
-
+            <!--slider-->
+            <section class="slider">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/carousel/studi-partenaire-eastcoders.jpg" alt="Studi partenaire Eastcoders">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/carousel/soutenir-eastcoders.jpg" alt="Soutenir Eastcoders">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
             </section>
-            <section>
-
+            <!--end slider-->
+            <!--introudction-->
+            <section class="container intro py-5">
+                <h1> <span class="logo-text">EASTCODERS'</span><br> Association fictive des codeurs de l'Est !</h1>
+                <p>Eastcoders' est la 1ère association en France à promouvoir les bienfaits du développement web !<br>
+                Notre association regroupe plus de 5000 <b>développeurs web</b> en France qui possèdent tous la même particularité : Ils sont <b>situés dans l'Est de la France !</b> </p>
+                <p>
+                    <a class="btn btn-outline-dark" href="#">Découvrir l'association !</a>
+                </p>
             </section>
+            <!--end introduction-->
             <section>
 
             </section>
          </main>
+         <!--end main section-->
+         <!--footer-->
+         <footer>
+            <p class="py-3">Copyright - Site réalisé par <a href="https://www.bd-web.fr">BD WEB</a></p>
+         </footer>
     </body>
 </html>
