Ajout contenu Accueil

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!--scripts-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
+        <script src="https://kit.fontawesome.com/2ead1f33fb.js" crossorigin="anonymous"></script>
         <!--stylesheets-->
         <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
@@ -71,19 +72,64 @@
             </section>
             <!--end slider-->
             <!--introudction-->
-            <section class="container intro py-5">
-                <h1> <span class="logo-text">EASTCODERS'</span><br> Association fictive des codeurs de l'Est !</h1>
-                <p>Eastcoders' est la 1ère association en France à promouvoir les bienfaits du développement web !<br>
-                Notre association regroupe plus de 5000 <b>développeurs web</b> en France qui possèdent tous la même particularité : Ils sont <b>situés dans l'Est de la France !</b> </p>
-                <p>
-                    <a class="btn btn-outline-dark" href="#">Découvrir l'association !</a>
-                </p>
+            <section class="intro py-5">
+                <div class="container">
+                    <h1> 1ère association fictive des codeurs de l'Est en France !</h1>
+                    <p>Eastcoders' est la 1ère association en France à promouvoir les bienfaits du développement web !<br>
+                    Notre association regroupe plus de 5000 <b>développeurs web</b> en France qui possèdent tous la même particularité : Ils sont <b>situés dans l'Est de la France !</b> </p>
+                    <p>
+                        <a class="btn btn-outline-dark" href="#">Découvrir l'association !</a>
+                    </p>
+                </div>
             </section>
             <!--end introduction-->
-            <section>
-
+            <section class="reassurance py-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm text-center">
+                            <i class="fa-sharp fa-solid fa-people-group reassurance-ico"></i>
+                            <p id="reassurance-title">+5k Membres</p>
+                            <p>Originaires de l'Est de la France</p>
+                        </div>
+                        <div class="col-sm text-center">
+                            <i class="fa-solid fa-heart-circle-bolt reassurance-ico"></i>
+                            <p id="reassurance-title">100% Passionnés</p>
+                            <p>Profitons de la vie en codant !</p>
+                        </div>
+                        <div class="col-sm text-center">
+                            <i class="fa-solid fa-handshake-angle reassurance-ico"></i>
+                            <p id="reassurance-title">Tous Solidaires !</p>
+                            <p>Nos membres sont soudés</p>
+                        </div>
+                    </div>
+                </div>
             </section>
          </main>
+         <section class="py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm my-auto">
+                        <img class="illustration" src="img/developpement-web.png" alt="Développement web"/>
+                    </div>
+                    <div class="col-sm my-auto">
+                        <h2 class="p-title-2">Défis développement web mensuel</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ratione sit perferendis laborum quisquam quaerat eos officiis, autem ab doloremque sunt rerum similique repellat eaque praesentium fugit amet vitae magnam!</p>
+                    </div> 
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm my-auto">
+                        <h2 class="p-title-2">Entraide entre développeurs web</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae, architecto et maxime eum aliquid suscipit modi ipsam quisquam assumenda autem quo consequatur, repellendus corrupti quas molestias, similique cum tempore.</p>
+                    </div>
+                    <div class="col-sm my-auto">
+                        <img class="illustration" src="img/entraide-developpeurs-web.png" alt="Entraide entre développeurs web"/>
+                    </div> 
+                </div>
+            </div>
+        </section>
+     </main>
          <!--end main section-->
          <!--footer-->
          <footer>
