MàJ slides + Contenu pages association & contact

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <!--stylesheets-->
         <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+        <!--icon-->
+        <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     </head>
     <body>
         <header>
@@ -74,7 +77,7 @@
             <!--introudction-->
             <section class="intro py-5">
                 <div class="container">
-                    <h1> 1ère association fictive des codeurs de l'Est en France !</h1>
+                    <h1> 1ère Association Fictive des Codeurs de l'Est en France !</h1>
                     <p>Eastcoders' est la 1ère association en France à promouvoir les bienfaits du développement web !<br>
                     Notre association regroupe plus de 5000 <b>développeurs web</b> en France qui possèdent tous la même particularité : Ils sont <b>situés dans l'Est de la France !</b> </p>
                     <p>
@@ -113,6 +116,7 @@
                     </div>
                     <div class="col-sm my-auto">
                         <h2 class="p-title-2">Défis développement web mensuel</h2>
+                        <div class="divider"></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse ratione sit perferendis laborum quisquam quaerat eos officiis, autem ab doloremque sunt rerum similique repellat eaque praesentium fugit amet vitae magnam!</p>
                     </div> 
                 </div>
@@ -121,6 +125,7 @@
                 <div class="row">
                     <div class="col-sm my-auto">
                         <h2 class="p-title-2">Entraide entre développeurs web</h2>
+                        <div class="divider"></div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quae, architecto et maxime eum aliquid suscipit modi ipsam quisquam assumenda autem quo consequatur, repellendus corrupti quas molestias, similique cum tempore.</p>
                     </div>
                     <div class="col-sm my-auto">
@@ -133,7 +138,7 @@
          <!--end main section-->
          <!--footer-->
          <footer>
-            <p class="py-3">Copyright - Site réalisé par <a href="https://www.bd-web.fr">BD WEB</a></p>
+            <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
          </footer>
     </body>
 </html>
