--- a/a-propos.html
+++ b/a-propos.html
@@ -9,9 +9,13 @@
         <!--scripts-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
+        <script src="https://kit.fontawesome.com/2ead1f33fb.js" crossorigin="anonymous"></script>
         <!--stylesheets-->
         <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+        <!--icon-->
+        <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     </head>
     <body>
         <header>
@@ -21,38 +25,72 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Accueil</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="a-propos.html">L'association<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="evenements.html">Nos événements</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-light" href="#">Soutenez-nous !</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="a-propos.html">L'association</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="evenements.html">Nos événements</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-light" href="#">Soutenez-nous !</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
     <main>
-        <section>
-
+        <section class="main-title">
+            <div class="container intro py-5">
+                <h1>L'association EASTCODERS'</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, laudantium similique! Modi ipsum repellendus explicabo labore, tempora praesentium qui recusandae nemo, laudantium et facilis molestiae! Officia, reprehenderit. Optio, error harum.</p>
+            </div>
         </section>
         <section>
-
+            <div class="container">
+                <div class="row py-5">
+                    <div class="col-sm">
+                        <img class="illustration" src="img/est-france.png" alt="Est de la France"/>
+                    </div>
+                    <div class="col-sm">
+                        <h2>Objectifs de l'association</h2>
+                        <div class="divider"></div>
+                        <h3>Fédérer les développeurs de l'Est de la France</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae sequi, libero quia, harum odio minima quas placeat expedita, optio sunt qui. Officiis corrupti placeat ullam est velit sequi sapiente voluptatem.</p>
+                        <h3>Valoriser les bienfaits de notre passion pour le code</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque vel vitae dolorem sed! Cum consequatur quaerat sint aliquid itaque nulla cumque ipsum et eum non nesciunt, tempore dolorum repudiandae incidunt.</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
-
+            <div class="container">
+                <div class="row py-5">
+                    <div class="col-sm">
+                        <h2>Les moyens d'actions</h2>
+                        <div class="divider"></div>
+                        <h3>Événements défis codes mensuels</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste odit, officia fugiat tempora quaerat beatae totam aperiam nisi eum voluptate et quod ad. Sed eius quas, reiciendis exercitationem rerum repudiandae?</p>
+                        <h3>Groupes d'échanges</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet temporibus sed aliquid suscipit quo sapiente explicabo, consequatur repellat libero modi ex fugiat et labore expedita eius rem assumenda tempore nemo?</p>
+                    </div>
+                    <div class="col-sm">
+                        <img class="illustration" src="img/groupe-échange-developpement-web.png" alt="Groupe d'échanges développement web"/>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+    <footer>
+        <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
+     </footer>
 </body>
 
 </html>
