--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,13 @@
         <!--scripts-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="library/bootstrap-4.4.1-dist/js/bootstrap.bundle.js"></script>
+        <script src="https://kit.fontawesome.com/2ead1f33fb.js" crossorigin="anonymous"></script>
         <!--stylesheets-->
         <link href="library/bootstrap-4.4.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+        <!--icon-->
+        <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
     </head>
     <body>
         <header>
@@ -21,38 +25,104 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="a-propos.html">L'association</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="evenements.html">Nos événements</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-light" href="#">Soutenez-nous !</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Accueil<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="a-propos.html">L'association</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="evenements.html">Nos événements</a> 
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-light" href="#">Soutenez-nous !</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
     <main>
-        <section>
-
+        <section class="main-title">
+            <div class="container intro py-5">
+                <h1>Nous contacter</h1>
+                <p>Le meilleur moyen de nous contacter, c'est de nous écrire par mail... Grâce à notre team de développeurs super efficaces, vous obtiendrez une réponse en moins de 48h !</p>
+            </div>
         </section>
         <section>
-
-        </section>
-        <section>
-
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <h2>Coordonnées</h2>
+                        <div class="divider"></div>
+                        <ul>
+                            <li>EASTCODERS'<br> 1 Rue des Champs Élysées 75000 Paris</li>
+                            <li>Téléphone : (+33)6.37.29.88.95</li>
+                            <li>
+                                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-8">
+                        <h2>Envoyer un mail</h2>
+                        <div class="divider"></div>
+                        <form>
+                            <div class="form-row">
+                              <div class="col-md-6">
+                                <label for="validationDefault02">Nom</label>
+                                <input type="text" class="form-control" id="validationDefault02" value="Durand" required>
+                              </div>
+                              <div class="col-md-6">
+                                <label for="validationDefault01">Prénom</label>
+                                <input type="text" class="form-control" id="validationDefault01" value="Marc" required>
+                              </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-12">
+                                    <label for="exampleFormControlInput1">Adresse email</label>
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                                </div>
+                            </div>
+                            <div class="form-row">
+                              <div class="col-md-6">
+                                <label for="validationDefault03">Ville</label>
+                                <input type="text" class="form-control" id="validationDefault03" required>
+                              </div>
+                              <div class="col-md-6">
+                                <label for="validationDefault05">Code Postal</label>
+                                <input type="text" class="form-control" id="validationDefault05" required>
+                              </div>
+                            </div>
+                            <div class="form-row">
+                              <div class="col-md-12"">
+                                <label for="exampleFormControlTextarea1">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                              </div>
+                            </div>
+                            <div class="form-group">
+                              <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                                <label class="form-check-label" for="invalidCheck2">
+                                  J'accepte de recevoir des informations à propos des événements organisés par l'association
+                                </label>
+                              </div>
+                            </div>
+                            <button class="btn btn-primary" type="submit">Envoyer</button>
+                          </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
+    <!--end main section-->
+    <!--footer-->
+    <footer>
+      <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
+    </footer>
 </body>
-
 </html>
