Ajout & modification de contenu sur l'ensemble des pages

--- a/a-propos.html
+++ b/a-propos.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-light" href="#">Soutenez-nous !</a>
+                            <a class="btn btn-light " href="contact.html">Rejoignez-nous !</a>
                         </li>
                     </ul>
                 </div>
@@ -50,6 +50,14 @@
         <section class="main-title">
             <div class="container intro py-5">
                 <h1>L'association EASTCODERS'</h1>
+                <!--breadcrumb start-->
+                <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
+                    <ul>
+                      <li><a href="index.html">Accueil</a></li>
+                      <li><span aria-current="page">L'association</span></li>
+                    </ul>
+                  </nav>
+                  <!--breadcrumb end-->
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, laudantium similique! Modi ipsum repellendus explicabo labore, tempora praesentium qui recusandae nemo, laudantium et facilis molestiae! Officia, reprehenderit. Optio, error harum.</p>
             </div>
         </section>
