--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-light" href="#">Soutenez-nous !</a>
+                            <a class="btn btn-light" href="contact.html"><i class="fa-solid fa-arrow-right"></i> Rejoignez-nous !</a>
                         </li>
                     </ul>
                 </div>
@@ -50,21 +50,31 @@
         <section class="main-title">
             <div class="container intro py-5">
                 <h1>Nous contacter</h1>
-                <p>Le meilleur moyen de nous contacter, c'est de nous écrire par mail... Grâce à notre team de développeurs super efficaces, vous obtiendrez une réponse en moins de 48h !</p>
+                <!--breadcrumb start-->
+                <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
+                  <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><span aria-current="page">Contact</span></li>
+                  </ul>
+                </nav>
+                <!--breadcrumb end-->
+                <p>Vous souhaitez <b>rejoindre EASTCODERS'</b>, nous soutenir ou <b>participer aux <a href="evenements.html">événements</a></b> ?<br> Contactez-nous ! Grâce à notre team de développeurs super efficaces, vous obtiendrez une réponse en moins de 48h !</p>
             </div>
         </section>
         <section>
             <div class="container py-5">
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 contact-details">
                         <h2>Coordonnées</h2>
                         <div class="divider"></div>
                         <ul>
                             <li>EASTCODERS'<br> 1 Rue des Champs Élysées 75000 Paris</li>
                             <li>Téléphone : (+33)6.37.29.88.95</li>
-                            <li>
-                                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                            <li>Réseaux sociaux :
+                              <ul class="social-icons">
+                                <li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                              </ul>
                             </li>
                         </ul>
                     </div>
@@ -85,7 +95,7 @@
                             <div class="form-row">
                                 <div class="col-md-12">
                                     <label for="exampleFormControlInput1">Adresse email</label>
-                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="marcdurand@gmail.com">
                                 </div>
                             </div>
                             <div class="form-row">
@@ -112,7 +122,7 @@
                                 </label>
                               </div>
                             </div>
-                            <button class="btn btn-primary" type="submit">Envoyer</button>
+                            <button class="btn btn-dark" type="submit">Envoyer</button>
                           </form>
                     </div>
                 </div>
