--- a/evenements.html
+++ b/evenements.html
@@ -40,23 +40,216 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-light" href="#">Soutenez-nous !</a>
+                            <a class="btn btn-light" href="contact.html">Rejoignez-nous !</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </header>
     <main>
-        <section>
-
+        <section class="main-title">
+            <div class="container intro py-5">
+                <h1>Nos événements</h1>
+                <!--breadcrumb start-->
+                <nav aria-label="Breadcrumb" class="breadcrumb-nav py-3">
+                    <ul>
+                      <li><a href="index.html">Accueil</a></li>
+                      <li><span aria-current="page">Nos événements</span></li>
+                    </ul>
+                  </nav>
+                  <!--breadcrumb end-->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, laudantium similique! Modi ipsum repellendus explicabo labore, tempora praesentium qui recusandae nemo, laudantium et facilis molestiae! Officia, reprehenderit. Optio, error harum.</p>
+            </div>
         </section>
-        <section>
-
-        </section>
-        <section>
-
-        </section>
+        <div class="container py-5">
+            <div class="row">
+                <!--events start-->
+                <div class="col-12 col-md-9">
+                    <section id="content">
+                        <h2 class="py-4">Agenda</h2>
+                        <article class="event-by-month" id="january">
+                            <h3>Janvier 2023</h3>
+                            <div class="divider"></div>
+                            <article class="event-details">
+                                <h4>Les Joies du code</h4>
+                                <p>
+                                    <img src="img/les-joies-du-code.png" class="event-img"/>
+                                    <span class="event-desc">Nous nous rassemblerons autour d'un verre pour échanger et s'entraider</span>
+                                    <span><i class="fa-solid fa-calendar"></i> Date : 20.01.2023</span>
+                                    <span><i class="fa-solid fa-clock"></i> Heure : 20h00 </span>
+                                    <span><i class="fa-solid fa-map-pin"></i> Brasserie Le République - 19 Rue Louis Paufique, 69002 Lyon</span>
+                                    <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                </p>
+                            </article>
+                            <article class="event-details">
+                                <h4>Défi Code Est VS Ouest</h4>
+                                <p>
+                                    <img src="img/defi-code.png" class="event-img"/>
+                                    <span class="event-desc">Associez-vous à notre projet pour concurrencer l'association WESTCODERS' !</span>
+                                    <span><i class="fa-solid fa-calendar"></i> Date : 25.01.2023</span>
+                                    <span><i class="fa-solid fa-clock"></i> Heure : 21h00 </span>
+                                    <span><i class="fa-solid fa-map-pin"></i> En ligne</span>
+                                    <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                </p>
+                            </article>
+                        </article>
+                        <article class="event-by-month" id="february">
+                            <h3>Février 2023</h3>
+                            <div class="divider"></div>
+                            <article class="event-details">
+                                    <h4>Les Joies du code</h4>
+                                    <p>
+                                        <img src="img/les-joies-du-code.png" class="event-img"/>
+                                        <span class="event-desc">Nous nous rassemblerons autour d'un verre pour échanger et s'entraider</span>
+                                        <span><i class="fa-solid fa-calendar"></i> Date : 20.02.2023</span>
+                                        <span><i class="fa-solid fa-clock"></i> Heure : 20h00 </span>
+                                        <span><i class="fa-solid fa-map-pin"></i> Brasserie Le République - 19 Rue Louis Paufique, 69002 Lyon</span>
+                                        <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                    </p>
+                            </article>
+                            <article class="event-details">
+                                <h4>Défi Code Est VS Ouest</h4>
+                                <p>
+                                    <img src="img/defi-code.png" class="event-img"/>
+                                    <span class="event-desc">Associez-vous à notre projet pour concurrencer l'association WESTCODERS' !</span>
+                                    <span><i class="fa-solid fa-calendar"></i> Date : 25.02.2023</span>
+                                    <span><i class="fa-solid fa-clock"></i> Heure : 21h00 </span>
+                                    <span><i class="fa-solid fa-map-pin"></i> En ligne</span>
+                                    <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                </p>
+                            </article>
+                        </article>
+                        <article class="event-by-month" id="march">
+                            <h3>Mars 2023</h3>
+                            <div class="divider"></div>
+                            <article class="event-details">
+                                    <h4>Les Joies du code</h4>
+                                    <p>
+                                        <img src="img/les-joies-du-code.png" class="event-img"/>
+                                        <span class="event-desc">Nous nous rassemblerons autour d'un verre pour échanger et s'entraider</span>
+                                        <span><i class="fa-solid fa-calendar"></i> Date : 20.03.2023</span>
+                                        <span><i class="fa-solid fa-clock"></i> Heure : 20h00 </span>
+                                        <span><i class="fa-solid fa-map-pin"></i> Brasserie Le République - 19 Rue Louis Paufique, 69002 Lyon</span>
+                                        <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                    </p>
+                            </article>
+                            <article class="event-details">
+                                <h4>Défi Code Est VS Ouest</h4>
+                                <p>
+                                    <img src="img/defi-code.png" class="event-img"/>
+                                    <span class="event-desc">Associez-vous à notre projet pour concurrencer l'association WESTCODERS' !</span>
+                                    <span><i class="fa-solid fa-calendar"></i> Date : 25.03.2023</span>
+                                    <span><i class="fa-solid fa-clock"></i> Heure : 21h00 </span>
+                                    <span><i class="fa-solid fa-map-pin"></i> En ligne</span>
+                                    <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                </p>
+                            </article>
+                        </article>
+                        <article class="event-by-month" id="april">
+                            <h3>Avril 2023</h3>
+                            <div class="divider"></div>
+                            <article class="event-details">
+                                    <h4>Les Joies du code</h4>
+                                    <p>
+                                        <img src="img/les-joies-du-code.png" class="event-img"/>
+                                        <span class="event-desc">Nous nous rassemblerons autour d'un verre pour échanger et s'entraider</span>
+                                        <span><i class="fa-solid fa-calendar"></i> Date : 20.04.2023</span>
+                                        <span><i class="fa-solid fa-clock"></i> Heure : 20h00 </span>
+                                        <span><i class="fa-solid fa-map-pin"></i> Brasserie Le République - 19 Rue Louis Paufique, 69002 Lyon</span>
+                                        <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                    </p>
+                            </article>
+                            <article class="event-details">
+                                <h4>Défi Code Est VS Ouest</h4>
+                                <p>
+                                    <img src="img/defi-code.png" class="event-img"/>
+                                    <span class="event-desc">Associez-vous à notre projet pour concurrencer l'association WESTCODERS' !</span>
+                                    <span><i class="fa-solid fa-calendar"></i> Date : 25.04.2023</span>
+                                    <span><i class="fa-solid fa-clock"></i> Heure : 21h00 </span>
+                                    <span><i class="fa-solid fa-map-pin"></i> En ligne</span>
+                                    <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                </p>
+                            </article>
+                        </article>
+                        <article class="event-by-month" id="may">
+                            <h3>Mai 2023</h3>
+                            <div class="divider"></div>
+                            <article class="event-details">
+                                    <h4>Les Joies du code</h4>
+                                    <p>
+                                        <img src="img/les-joies-du-code.png" class="event-img"/>
+                                        <span class="event-desc">Nous nous rassemblerons autour d'un verre pour échanger et s'entraider</span>
+                                        <span><i class="fa-solid fa-calendar"></i> Date : 20.05.2023</span>
+                                        <span><i class="fa-solid fa-clock"></i> Heure : 20h00 </span>
+                                        <span><i class="fa-solid fa-map-pin"></i> Brasserie Le République - 19 Rue Louis Paufique, 69002 Lyon</span>
+                                        <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                    </p>
+                            </article>
+                            <article class="event-details">
+                                <h4>Défi Code Est VS Ouest</h4>
+                                <p>
+                                    <img src="img/defi-code.png" class="event-img"/>
+                                    <span class="event-desc">Associez-vous à notre projet pour concurrencer l'association WESTCODERS' !</span>
+                                    <span><i class="fa-solid fa-calendar"></i> Date : 25.05.2023</span>
+                                    <span><i class="fa-solid fa-clock"></i> Heure : 21h00 </span>
+                                    <span><i class="fa-solid fa-map-pin"></i> En ligne</span>
+                                    <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                </p>
+                            </article>
+                        </article>
+                        <article class="event-by-month" id="june">
+                            <h3>Juin 2023</h3>
+                            <div class="divider"></div>
+                            <article class="event-details">
+                                    <h4>Les Joies du code</h4>
+                                    <p>
+                                        <img src="img/les-joies-du-code.png" class="event-img"/>
+                                        <span class="event-desc">Nous nous rassemblerons autour d'un verre pour échanger et s'entraider</span>
+                                        <span><i class="fa-solid fa-calendar"></i> Date : 20.06.2023</span>
+                                        <span><i class="fa-solid fa-clock"></i> Heure : 20h00 </span>
+                                        <span><i class="fa-solid fa-map-pin"></i> Brasserie Le République - 19 Rue Louis Paufique, 69002 Lyon</span>
+                                        <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                    </p>
+                            </article>
+                            <article class="event-details">
+                                <h4>Défi Code Est VS Ouest</h4>
+                                <p>
+                                    <img src="img/defi-code.png" class="event-img"/>
+                                    <span class="event-desc">Associez-vous à notre projet pour concurrencer l'association WESTCODERS' !</span>
+                                    <span><i class="fa-solid fa-calendar"></i> Date : 25.06.2023</span>
+                                    <span><i class="fa-solid fa-clock"></i> Heure : 21h00 </span>
+                                    <span><i class="fa-solid fa-map-pin"></i> En ligne</span>
+                                    <a class="btn btn-dark my-3" href="contact.html">Je m'inscris !</a>
+                                </p>
+                            </article>
+                        </article>
+                    </section>
+                </div>
+                <!--events end-->
+                <div class="col-12 col-md-3">
+                    <section id="sidebar">
+                        <h2 class="py-4">Période</h2>
+                        <aside>
+                            <ul class="month-list">
+                                <li><a href="#january">Janvier 2023</a></li>
+                                <li><a href="#february">Février 2023</a></li>
+                                <li><a href="#march">Mars 2023</a></li>
+                                <li><a href="#april">Avril 2023</a></li>
+                                <li><a href="#may">Mai 2023</a></li>
+                                <li><a href="#june">Juin 2023</a></li>
+                            </ul>
+                        </aside>
+                    </section>
+                </div>
+            </div>
+        </div>
     </main>
+             <!--end main section-->
+         <!--footer-->
+         <footer>
+            <p class="py-3">© Copyright - Site réalisé par <a href="https://www.bd-web.fr" target="_blank">BD WEB</a></p>
+         </footer>
+</html>
 </body>
 
 </html>
