--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-light" href="#">Soutenez-nous !</a>
+                            <a class="btn btn-light" href="contact.html">Rejoignez-nous !</a>
                         </li>
                     </ul>
                 </div>
@@ -57,19 +57,19 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="d-block w-100" src="img/carousel/studi-partenaire-eastcoders.jpg" alt="Studi partenaire Eastcoders">
+                        <a href="https://www.studi.com/fr" target="_blank"><img class="d-block w-100" src="img/carousel/studi-partenaire-eastcoders.jpg" alt="Studi partenaire Eastcoders"></a>
                       </div>
                       <div class="carousel-item">
-                        <img class="d-block w-100" src="img/carousel/soutenir-eastcoders.jpg" alt="Soutenir Eastcoders">
+                        <a href="contact.html" target="_blank"><img class="d-block w-100" src="img/carousel/soutenir-eastcoders.jpg" alt="Soutenir Eastcoders"></a>
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
+                      <span class="sr-only">Précédent</span>
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
+                      <span class="sr-only">Suivant</span>
                     </a>
                   </div>
             </section>
@@ -78,10 +78,10 @@
             <section class="intro py-5">
                 <div class="container">
                     <h1> 1ère Association Fictive des Codeurs de l'Est en France !</h1>
-                    <p>Eastcoders' est la 1ère association en France à promouvoir les bienfaits du développement web !<br>
-                    Notre association regroupe plus de 5000 <b>développeurs web</b> en France qui possèdent tous la même particularité : Ils sont <b>situés dans l'Est de la France !</b> </p>
+                    <p>Eastcoders' est la 1ère association en France à fédérer les développeurs web de l'Est de la France!<br>
+                    Notre association regroupe plus de 5000 <b>développeurs web</b> qui possèdent tous la même particularité : Ils sont <b>situés sur le coté Est de la France !</b> </p>
                     <p>
-                        <a class="btn btn-outline-dark" href="#">Découvrir l'association !</a>
+                        <a class="btn btn-outline-dark" href="a-propos.html">Découvrir l'association !</a>
                     </p>
                 </div>
             </section>
@@ -91,17 +91,17 @@
                     <div class="row">
                         <div class="col-sm text-center">
                             <i class="fa-sharp fa-solid fa-people-group reassurance-ico"></i>
-                            <p id="reassurance-title">+5k Membres</p>
+                            <p class="reassurance-title">+5k Membres</p>
                             <p>Originaires de l'Est de la France</p>
                         </div>
                         <div class="col-sm text-center">
                             <i class="fa-solid fa-heart-circle-bolt reassurance-ico"></i>
-                            <p id="reassurance-title">100% Passionnés</p>
+                            <p class="reassurance-title">100% Passionnés</p>
                             <p>Profitons de la vie en codant !</p>
                         </div>
                         <div class="col-sm text-center">
                             <i class="fa-solid fa-handshake-angle reassurance-ico"></i>
-                            <p id="reassurance-title">Tous Solidaires !</p>
+                            <p class="reassurance-title">Tous Solidaires !</p>
                             <p>Nos membres sont soudés</p>
                         </div>
                     </div>
